// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddZoneScreen AddSectionScreen with invalid section count 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "stretch",
        "flex": 0.9,
        "justifyContent": "flex-start",
        "marginTop": 5,
      }
    }
  >
    <FlatList
      data={
        Array [
          Object {
            "name": 1,
            "sectionCount": 100,
          },
        ]
      }
      disableVirtualization={false}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onEndReachedThreshold={2}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      updateCellsBatchingPeriod={50}
      windowSize={21}
    />
  </View>
  <View
    style={
      Object {
        "flex": 0.1,
      }
    }
  >
    <ForwardRef
      disabled={true}
      onPress={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#0071e9",
          "borderColor": "#0071e9",
          "borderRadius": 4,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 40,
          "justifyContent": "center",
          "marginHorizontal": 15,
          "marginVertical": 10,
          "paddingVertical": 10,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#ffffffff",
            "textAlign": "center",
          }
        }
      >
        [missing "en.GENERICS.CONTINUE" translation]
      </Text>
    </ForwardRef>
  </View>
</View>
`;

exports[`AddZoneScreen AddSectionScreen with valid input from add aisle 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "stretch",
        "flex": 0.9,
        "justifyContent": "flex-start",
        "marginTop": 5,
      }
    }
  >
    <FlatList
      data={
        Array [
          Object {
            "name": 1,
            "sectionCount": 1,
          },
          Object {
            "name": 2,
            "sectionCount": 1,
          },
          Object {
            "name": 3,
            "sectionCount": 1,
          },
        ]
      }
      disableVirtualization={false}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onEndReachedThreshold={2}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      updateCellsBatchingPeriod={50}
      windowSize={21}
    />
  </View>
  <View
    style={
      Object {
        "flex": 0.1,
      }
    }
  >
    <ForwardRef
      disabled={false}
      onPress={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#0071e9",
          "borderColor": "#0071e9",
          "borderRadius": 4,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 40,
          "justifyContent": "center",
          "marginHorizontal": 15,
          "marginVertical": 10,
          "paddingVertical": 10,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#ffffffff",
            "textAlign": "center",
          }
        }
      >
        [missing "en.GENERICS.CONTINUE" translation]
      </Text>
    </ForwardRef>
  </View>
</View>
`;

exports[`AddZoneScreen AddSectionScreen with valid input from add section 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "stretch",
        "flex": 0.9,
        "justifyContent": "flex-start",
        "marginTop": 5,
      }
    }
  >
    <FlatList
      data={
        Array [
          Object {
            "name": "1",
            "sectionCount": 4,
          },
        ]
      }
      disableVirtualization={false}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onEndReachedThreshold={2}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      updateCellsBatchingPeriod={50}
      windowSize={21}
    />
  </View>
  <View
    style={
      Object {
        "flex": 0.1,
      }
    }
  >
    <ForwardRef
      disabled={false}
      onPress={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#0071e9",
          "borderColor": "#0071e9",
          "borderRadius": 4,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 40,
          "justifyContent": "center",
          "marginHorizontal": 15,
          "marginVertical": 10,
          "paddingVertical": 10,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#ffffffff",
            "textAlign": "center",
          }
        }
      >
        [missing "en.GENERICS.CONTINUE" translation]
      </Text>
    </ForwardRef>
  </View>
</View>
`;

exports[`AddZoneScreen AddSectionScreen with valid input from add zone 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "stretch",
        "flex": 0.9,
        "justifyContent": "flex-start",
        "marginTop": 5,
      }
    }
  >
    <FlatList
      data={
        Array [
          Object {
            "name": 1,
            "sectionCount": 1,
          },
          Object {
            "name": 2,
            "sectionCount": 1,
          },
          Object {
            "name": 3,
            "sectionCount": 1,
          },
        ]
      }
      disableVirtualization={false}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onEndReachedThreshold={2}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      updateCellsBatchingPeriod={50}
      windowSize={21}
    />
  </View>
  <View
    style={
      Object {
        "flex": 0.1,
      }
    }
  >
    <ForwardRef
      disabled={false}
      onPress={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#0071e9",
          "borderColor": "#0071e9",
          "borderRadius": 4,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 40,
          "justifyContent": "center",
          "marginHorizontal": 15,
          "marginVertical": 10,
          "paddingVertical": 10,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#ffffffff",
            "textAlign": "center",
          }
        }
      >
        [missing "en.GENERICS.CONTINUE" translation]
      </Text>
    </ForwardRef>
  </View>
</View>
`;
